style:finalização  estilização  do  header

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,5 +1,6 @@
 $color-black: #000;
 $color-white:#fff;
 $color-green: #00745A;
+$green-hover: rgb(61, 92, 61);
 $color-light: #F8F8F8;
 $color-dark: #0B0B0B;
