--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   height: 80px;
   justify-content: space-between;
+  align-items: center;
   padding: 0 4rem;
   border-bottom: 1px solid colors.$color-black;
 
@@ -49,5 +50,30 @@
     &:hover {
         background-color: colors.$green-hover;
     }
+  }
+}
+
+.menuHamburguer {
+  display: none;
+ 
+}
+
+@media  screen and (max-width:650px) {
+  .header {
+    nav {
+      display: none;
+    }
+  }
+  .menuHamburguer {
+    display: block;
+    width: 40px;
+        height: 50px;
+  }
+
+}
+
+@media screen and (max-width:500px) {
+  .header {
+    padding: 0 2rem;
   }
 }
