--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -81,6 +81,16 @@
   flex-direction: column;
   gap: 2rem;
 
+  h2 {
+    font-weight: bold;
+    font-size: 2.4rem;
+  }
+
+  p {
+    font-weight: 400;
+    font-size: 1.5rem;
+  }
+
   .boxCardsMissao {
     display: flex;
     gap: 1rem;
