style:estilização  cards  de  estatísticas

--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -104,6 +104,10 @@
   background-color: colors.$color-white;
   color: colors.$color-black;
   padding: 4rem;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem; 
   border: 1px solid red;
 
   h2 {
@@ -114,6 +118,12 @@
   p {
     font-weight: 400;
     font-size: 1.5rem;
+  }
+
+  .boxCardsEstatisticas {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
   }
 }
 
