--- a/src/pages/voluntarios/voluntarios.module.scss
+++ b/src/pages/voluntarios/voluntarios.module.scss
@@ -31,18 +31,18 @@
 //estilização  sessão  formulário
 
 .containerForm {
-   background-color: colors.$color-green;
-   height: 70vh;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   form {
+  background-color: colors.$color-green;
+  height: 110vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  form {
     background-color: colors.$color-white;
     width: 80%;
     border-radius: 16px;
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    flex-direction: column;    
+    gap: 2rem;
     padding: 2rem;
 
     h2 {
@@ -59,13 +59,48 @@
       height: 50px;
     }
 
-    input, textarea {
+    input,
+    textarea {
       border-radius: 10px;
       background-color: colors.$color-light;
       border: 1px solid colors.$color-black;
+      padding: 0.6rem;
+      font-size: 1rem;
+
+      &::placeholder {
+        color: colors.$color-gray;
+      }
     }
 
-    .groupInput{
+    textarea {
+      height: 200px;
+      resize: none;
+    }
+
+    p {
+      text-align: center;
+      font-weight: 400;
+      font-size: 1.1rem;
+    }
+
+    button {
+      padding: 0.8rem 1.2rem;
+      border-radius: 5px;
+      border: none;
+      cursor: pointer;
+      transition: 0.3s;
+      font-weight: 500;
+      font-size: 1.3rem;
+      background-color: colors.$color-green;
+      color: colors.$color-white;
+      width: 200px;
+
+      &:hover {
+        background-color: colors.$green-hover;
+      }
+    }
+
+    .groupInput {
       display: flex;
       flex-direction: column;
       gap: 1rem;
@@ -73,14 +108,23 @@
 
     .boxFlexivel {
       display: flex;
-      gap: 1rem;
+      gap: 2rem;
+
+      input {
+        width: 50%;
+      }
     }
-   }
+
+    .containerButton {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
 
 @media screen and (max-width: 1030px) {
   .containerVoluntario {
-    height: 130vh;   
+    height: 130vh;
     .containerCards {
       flex-direction: column;
     }
