--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -11,7 +11,7 @@
   div {
     display: flex;
     align-items: center;
-    gap: 0.4rem;    
+    gap: 0.4rem;
   }
 
   nav {
@@ -25,7 +25,8 @@
     font-weight: bold;
   }
 
-  a, button {
+  a,
+  button {
     font-weight: 500;
     font-size: 1.3rem;
   }
@@ -34,31 +35,32 @@
     color: colors.$color-black;
     transition: 0.3s;
     &:hover {
-        color: rgb(46, 46, 232);
+      color: rgb(46, 46, 232);
     }
   }
 
   button {
     background-color: colors.$color-green;
     color: colors.$color-white;
-    padding: 0.8rem 1.2rem;   
+    padding: 0.8rem 1.2rem;
     border-radius: 5px;
     border: none;
     cursor: pointer;
     transition: 0.3s;
 
     &:hover {
-        background-color: colors.$green-hover;
+      background-color: colors.$green-hover;
     }
   }
 }
 
 .menuHamburguer {
   display: none;
- 
+  cursor: pointer;
+  user-select: none;
 }
 
-@media  screen and (max-width:650px) {
+@media screen and (max-width: 650px) {
   .header {
     nav {
       display: none;
@@ -67,13 +69,50 @@
   .menuHamburguer {
     display: block;
     width: 40px;
-        height: 50px;
+    height: 50px;
   }
 
+  .mobileNav {
+    display: none;
+  }
 }
 
-@media screen and (max-width:500px) {
+/* mobile menu styles */
+.mobileNav {
+  position: fixed;
+  top: 80px;
+  right: 0;
+  left: 0;
+  background: white;
+  display: none;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1.2rem 2rem;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.12);
+  z-index: 9999;
+  transform-origin: top right;
+  transition: opacity 180ms ease, transform 180ms ease;
+  opacity: 0;
+  transform: translateY(-6px);
+}
+
+.mobileNav a,
+.mobileNav button {
+  font-size: 1.2rem;
+}
+
+.mobileNav.open {
+  display: flex;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+@media screen and (max-width: 500px) {
   .header {
     padding: 0 2rem;
+
+    p {
+      font-size: 1rem;
+    }
   }
 }
